# lambda-strategies

./: README.md  lambda-strategies.cabal  strategies.txt
src/: Main.hs  Strategies.hs  TUI.hs
