name:                lambda-strategies
version:             0.1.0.0
synopsis:            A TUI program that shows a line randomly selected from a given file.
description:         Please see README.md
homepage:            https://github.com/Nynergy/lambda-strategies#readme
license:             BSD3
license-file:        LICENSE
author:              Ben Buchanan
maintainer:          bsbuchanan99@gmail.com
copyright:           2020 Ben Buchanan
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable strategies
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Strategies
                     , TUI
  ghc-options:         -Wall -threaded
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , brick
                     , directory
                     , random
